src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__type_alias_complex.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Type(
            TypeDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 5,
                        end: 12,
                        start_line: 1,
                        start_col: 6,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 13,
                                            end: 14,
                                            start_line: 1,
                                            start_col: 14,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                            ),
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Span {
                                            start: 16,
                                            end: 17,
                                            start_line: 1,
                                            start_col: 17,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 16,
                                        end: 17,
                                        start_line: 1,
                                        start_col: 17,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 12,
                            end: 18,
                            start_line: 1,
                            start_col: 13,
                        },
                    },
                ),
                ty: Some(
                    Type {
                        kind: Function {
                            params: [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 24,
                                                            end: 25,
                                                            start_line: 1,
                                                            start_col: 25,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 24,
                                                end: 25,
                                                start_line: 1,
                                                start_col: 25,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 24,
                                        end: 25,
                                        start_line: 1,
                                        start_col: 25,
                                    },
                                },
                            ],
                            return_type: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 4,
                                                    },
                                                    span: Span {
                                                        start: 30,
                                                        end: 36,
                                                        start_line: 1,
                                                        start_col: 31,
                                                    },
                                                },
                                                args: Some(
                                                    TypeArgs {
                                                        args: [
                                                            Type(
                                                                Type {
                                                                    kind: Path(
                                                                        TypePath {
                                                                            segments: [
                                                                                TypePathSegment {
                                                                                    name: Spanned {
                                                                                        node: SymbolU32 {
                                                                                            value: 2,
                                                                                        },
                                                                                        span: Span {
                                                                                            start: 37,
                                                                                            end: 38,
                                                                                            start_line: 1,
                                                                                            start_col: 38,
                                                                                        },
                                                                                    },
                                                                                    args: None,
                                                                                },
                                                                            ],
                                                                            span: Span {
                                                                                start: 37,
                                                                                end: 38,
                                                                                start_line: 1,
                                                                                start_col: 38,
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: Span {
                                                                        start: 37,
                                                                        end: 38,
                                                                        start_line: 1,
                                                                        start_col: 38,
                                                                    },
                                                                },
                                                            ),
                                                            Type(
                                                                Type {
                                                                    kind: Path(
                                                                        TypePath {
                                                                            segments: [
                                                                                TypePathSegment {
                                                                                    name: Spanned {
                                                                                        node: SymbolU32 {
                                                                                            value: 3,
                                                                                        },
                                                                                        span: Span {
                                                                                            start: 40,
                                                                                            end: 41,
                                                                                            start_line: 1,
                                                                                            start_col: 41,
                                                                                        },
                                                                                    },
                                                                                    args: None,
                                                                                },
                                                                            ],
                                                                            span: Span {
                                                                                start: 40,
                                                                                end: 41,
                                                                                start_line: 1,
                                                                                start_col: 41,
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: Span {
                                                                        start: 40,
                                                                        end: 41,
                                                                        start_line: 1,
                                                                        start_col: 41,
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                        span: Span {
                                                            start: 36,
                                                            end: 42,
                                                            start_line: 1,
                                                            start_col: 37,
                                                        },
                                                    },
                                                ),
                                            },
                                        ],
                                        span: Span {
                                            start: 30,
                                            end: 42,
                                            start_line: 1,
                                            start_col: 31,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 30,
                                    end: 42,
                                    start_line: 1,
                                    start_col: 31,
                                },
                            },
                            effects: None,
                        },
                        span: Span {
                            start: 21,
                            end: 42,
                            start_line: 1,
                            start_col: 22,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 43,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 43,
        start_line: 1,
        start_col: 1,
    },
}
