src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__type_alias_generic.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Type(
            TypeDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 5,
                        end: 14,
                        start_line: 1,
                        start_col: 6,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 15,
                                        end: 16,
                                        start_line: 1,
                                        start_col: 16,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 14,
                            end: 17,
                            start_line: 1,
                            start_col: 15,
                        },
                    },
                ),
                ty: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 20,
                                                end: 27,
                                                start_line: 1,
                                                start_col: 21,
                                            },
                                        },
                                        args: Some(
                                            TypeArgs {
                                                args: [
                                                    Type(
                                                        Type {
                                                            kind: Path(
                                                                TypePath {
                                                                    segments: [
                                                                        TypePathSegment {
                                                                            name: Spanned {
                                                                                node: SymbolU32 {
                                                                                    value: 4,
                                                                                },
                                                                                span: Span {
                                                                                    start: 28,
                                                                                    end: 34,
                                                                                    start_line: 1,
                                                                                    start_col: 29,
                                                                                },
                                                                            },
                                                                            args: None,
                                                                        },
                                                                    ],
                                                                    span: Span {
                                                                        start: 28,
                                                                        end: 34,
                                                                        start_line: 1,
                                                                        start_col: 29,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 28,
                                                                end: 34,
                                                                start_line: 1,
                                                                start_col: 29,
                                                            },
                                                        },
                                                    ),
                                                    Type(
                                                        Type {
                                                            kind: Path(
                                                                TypePath {
                                                                    segments: [
                                                                        TypePathSegment {
                                                                            name: Spanned {
                                                                                node: SymbolU32 {
                                                                                    value: 2,
                                                                                },
                                                                                span: Span {
                                                                                    start: 36,
                                                                                    end: 37,
                                                                                    start_line: 1,
                                                                                    start_col: 37,
                                                                                },
                                                                            },
                                                                            args: None,
                                                                        },
                                                                    ],
                                                                    span: Span {
                                                                        start: 36,
                                                                        end: 37,
                                                                        start_line: 1,
                                                                        start_col: 37,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 36,
                                                                end: 37,
                                                                start_line: 1,
                                                                start_col: 37,
                                                            },
                                                        },
                                                    ),
                                                ],
                                                span: Span {
                                                    start: 27,
                                                    end: 38,
                                                    start_line: 1,
                                                    start_col: 28,
                                                },
                                            },
                                        ),
                                    },
                                ],
                                span: Span {
                                    start: 20,
                                    end: 38,
                                    start_line: 1,
                                    start_col: 21,
                                },
                            },
                        ),
                        span: Span {
                            start: 20,
                            end: 38,
                            start_line: 1,
                            start_col: 21,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 39,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 39,
        start_line: 1,
        start_col: 1,
    },
}
