src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__unclosed_brace.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0101"), message: "expected `}`, found end of file", span: Span { start: 22, end: 22, start_line: 0, start_col: 0 }, labels: [], suggestions: [], source_file: None, source_content: None }]
